<package>
  <name>move_base_ompl</name>
  <version>0.0.0</version>
  <description>
    Global path planner plugin based on OMPL for move_base package
  </description>
  <maintainer email="windel.bouwman@gmail.com">Kangbeen Lee</maintainer>
  <license>TODO</license>

  <author>Kangbeen Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ompl</build_depend>

  <run_depend>costmap_2d</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ompl</run_depend>
  <export>
      <nav_core plugin="${prefix}/ompl_global_planner_plugin.xml" />
  </export>

</package>
